# nekRS-decompressor

./: .gitignore  CMakeLists.txt  README.md  decompressor.cpp
compressor/: compression.h  jicf.nek5000  jicf.udf
